--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: toolshedplanemo
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -21,12 +21,12 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
-
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: pip install planemo
-
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v2
+      with: 
+        python-version: '3.x'
+    - name: Install dependencies
+    run: python -m pip install --upgrade pip setuptools wheel planemo
     # Runs a set of commands using the runners shell
     - name: Test with planemo
-      run: planemo test rgToolFactory2.xml  --test_data ./test-data
+     run: planemo test rgToolFactory2.xml  --test_data ./test-data
