--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,11 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    - name: Set up Python 3.x
+    - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with: 
-        python-version: '3.x'
+        python-version: '3.8'
     - name: Install dependencies
-      run: python -m pip install --upgrade pip setuptools wheel planemo
+      run: python3 -m pip install --upgrade pip setuptools wheel planemo
     - name: Test with planemo
       run: planemo test rgToolFactory2.xml  --test_data ./test-data
