--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
       with: 
         python-version: '3.8'
     - name finesse python3
-      run: rm -f /usr/bin/python && ln -s `which python3` /usr/bin/python
+      run: rm -f /usr/bin/python
+      run: ln -s `which python3` /usr/bin/python
     - name: Install dependencies
       run: python3 -m pip install --upgrade pip setuptools wheel planemo
     - name: Test with planemo
