--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-python@v2
       with: 
         python-version: '3.8'
-    - name finesse python3
+    - name: finesse python3
       run: rm -f /usr/bin/python
       run: ln -s `which python3` /usr/bin/python
     - name: Install dependencies
