--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
         python-version: '3.8'
     - name: finesse python3
       run: rm -f /usr/bin/python
+    - name: finesse python2
       run: ln -s `which python3` /usr/bin/python
     - name: Install dependencies
       run: python3 -m pip install --upgrade pip setuptools wheel planemo
