--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -12,7 +12,7 @@ jobs:
   # - a file containing the list of changed repositories
   # which are needed in subsequent steps.
   setup:
-    name: Setup cache and determine changed repositories
+    name: test a git repository containing a galaxy tool before commit or PR
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -30,224 +30,16 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Determine latest galaxy commit
-      run: echo ::set-env name=GALAXY_HEAD_SHA::$(git ls-remote ${{ env.GALAXY_REPO }} refs/heads/${{ env.GALAXY_RELEASE }} | cut -f1)
-    - name: Save latest galaxy commit to artifact file
-      run: echo ${{ env.GALAXY_HEAD_SHA }} > galaxy.sha
-    - uses: actions/upload-artifact@v2
-      with:
-        name: Workflow artifacts
-        path: galaxy.sha
-    - name: Cache .cache/pip
-      uses: actions/cache@v2
-      id: cache-pip
-      with:
-        path: ~/.cache/pip
-        key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ env.GALAXY_HEAD_SHA }}
-    - name: Cache .planemo
-      uses: actions/cache@v2
-      id: cache-planemo
-      with:
-        path: ~/.planemo
-        key: planemo_cache_py_${{ matrix.python-version }}_gxy_${{ env.GALAXY_HEAD_SHA }}
     # Install the `wheel` package so that when installing other packages which
     # are not available as wheels, pip will build a wheel for them, which can be cached.
     - name: Install wheel
       run: pip install wheel
     - name: Install Planemo and flake8
       run: pip install planemo flake8 flake8-import-order
-    - name: Fake a Planemo run to update cache
-      if: steps.cache-pip.outputs.cache-hit != 'true' || steps.cache-planemo.outputs.cache-hit != 'true'
-      run: |
-        touch tool.xml
-        PIP_QUIET=1 planemo test --galaxy_python_version ${{ matrix.python-version }} --no_conda_auto_init --galaxy_source $GALAXY_REPO --galaxy_branch $GALAXY_RELEASE
     - uses: actions/checkout@v2
       with:
         fetch-depth: 1
-
-  # Planemo lint the changed repositories
-  lint:
-    name: Lint tools
-    needs: setup
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [3.6]
-    steps:
-    # checkout the repository
-    # and use it as the current working directory
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 1
-    - uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - uses: actions/download-artifact@v2
-    - name: Determine latest galaxy commit
-      run: echo ::set-env name=GALAXY_HEAD_SHA::$(cat ../workflow_artifacts/galaxy.sha)
-    - name: Cache .cache/pip
-      uses: actions/cache@v2
-      id: cache-pip
-      with:
-        path: ~/.cache/pip
-        key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ env.GALAXY_HEAD_SHA }}
-    - name: Install Planemo
-      run: pip install planemo
     - name: Planemo lint
       run: planemo lint .
-
-  ## flake8 of Python scripts in the changed repositories
-  #flake8:
-    #name: Lint Python scripts
-    #needs: setup
-    #runs-on: ubuntu-latest
-    #strategy:
-      #fail-fast: false
-      #matrix:
-        #python-version: [3.6]
-    #steps:
-    ## checkout the repository to master
-    ## and use it as the current working directory
-    #- uses: actions/checkout@v2
-      #with:
-        #fetch-depth: 1
-    #- uses: actions/setup-python@v1
-      #with:
-        #python-version: ${{ matrix.python-version }}
-    #- uses: actions/download-artifact@v2
-      #with:
-        #name: Workflow artifacts
-        #path: ../workflow_artifacts/
-    #- name: Determine latest galaxy commit
-      #run: echo ::set-env name=GALAXY_HEAD_SHA::$(cat ../workflow_artifacts/galaxy.sha)
-    #- name: Cache .cache/pip
-      #uses: actions/cache@v2
-      #id: cache-pip
-      #with:
-        #path: ~/.cache/pip
-        #key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ env.GALAXY_HEAD_SHA }}
-    #- name: Install flake8
-      #run: pip install flake8 flake8-import-order
-    #- name: Flake8
-      #run: flake8 .
-
-
-  # Planemo test the changed repositories, each chunk creates an artifact
-  # containing HTML and JSON reports for the executed tests
-  test:
-    name: Test tools
-    # This job runs on Linux
-    runs-on: ubuntu-latest
-    needs: setup
-    strategy:
-      fail-fast: false
-      matrix:
-        chunk: [0, 1, 2, 3]
-        python-version: [3.6]
-    services:
-      postgres:
-        image: postgres:11
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-        ports:
-          - 5432:5432
-    steps:
-    # checkout the repository
-    # and use it as the current working directory
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 1
-    - uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - uses: actions/download-artifact@v2
-      with:
-        name: Workflow artifacts
-        path: ../workflow_artifacts/
-    - name: Determine latest galaxy commit
-      run: echo ::set-env name=GALAXY_HEAD_SHA::$(cat ../workflow_artifacts/galaxy.sha)
-    - name: Cache .cache/pip
-      uses: actions/cache@v2
-      id: cache-pip
-      with:
-        path: ~/.cache/pip
-        key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ env.GALAXY_HEAD_SHA }}
-    - name: Cache .planemo
-      uses: actions/cache@v2
-      id: cache-planemo
-      with:
-        path: ~/.planemo
-        key: planemo_cache_py_${{ matrix.python-version }}_gxy_${{ env.GALAXY_HEAD_SHA }}
-    - name: Install Planemo
-      run: pip install planemo
     - name: Planemo test tools
-      run: |
-            PIP_QUIET=1 planemo test --database_connection postgresql://postgres:postgres@localhost:5432/galaxy 
-            --no_dependency_resolution --no_conda_auto_init --galaxy_source $GALAXY_REPO --galaxy_branch $GALAXY_RELEASE 
-            --galaxy_python_version ${{ matrix.python-version }} --test_output_json tool_test_output.json .
-    - name: Merge tool_test_output.json files
-      run: find . -name tool_test_output.json -exec sh -c 'planemo merge_test_reports "$@" tool_test_output.json' sh {} +
-    - name: Create tool_test_output.html
-      run: planemo test_reports tool_test_output.json --test_output tool_test_output.html
-    - name: Copy artifacts into place
-      run: |
-        mkdir upload
-        mv tool_test_output.json tool_test_output.html upload/
-    - uses: actions/upload-artifact@v2.0.1
-      with:
-        name: 'Tool test output ${{ matrix.chunk  }}'
-        path: upload
-
-  # - combine the results of the test chunks (which will never fail due
-  #   to `|| true`) and create a global test report as json and html which
-  #   is provided as artifact
-  # - check if any tool test actually failed (by lookup in the combined json)
-  #   and fail this step if this is the case
-  combine_outputs:
-    name: Combine chunked test results
-    needs: test
-    strategy:
-      matrix:
-        python-version: [3.6]
-    # This job runs on Linux
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/download-artifact@v2
-      with:
-        path: artifacts
-    - uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Determine latest galaxy commit
-      run: echo ::set-env name=GALAXY_HEAD_SHA::$(cat "artifacts/Workflow artifacts/galaxy.sha")
-    - name: Cache .cache/pip
-      uses: actions/cache@v2
-      id: cache-pip
-      with:
-        path: ~/.cache/pip
-        key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ env.GALAXY_HEAD_SHA }}
-    - name: Install Planemo
-      run: pip install planemo
-    - name: Install jq
-      run: sudo apt-get install jq
-    - name: Combine outputs
-      run: find artifacts/ -name tool_test_output.json -exec sh -c 'planemo merge_test_reports "$@" tool_test_output.json' sh {} +
-    - name: Create tool_test_output.html
-      run: planemo test_reports tool_test_output.json --test_output tool_test_output.html
-    - name: Copy artifacts into place
-      run: |
-        mkdir upload
-        mv tool_test_output.json tool_test_output.html upload/
-    - uses: actions/upload-artifact@v2.0.1
-      with:
-        name: 'All tool test results'
-        path: upload
-    - name: Check status of combined status
-      run: |
-        if jq '.["tests"][]["data"]["status"]' upload/tool_test_output.json | grep -v "success"; then
-            echo "Unsuccessful tests found, inspect the 'All tool test results' artifact for details."
-            exit 1
-        fi
+      run: planemo test --galaxy_root $GALAXY_REPO --galaxy_python_version 3.6  .
