--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Install wheel
       run: pip install wheel
     - name: Install Planemo and flake8
-      run: pip install planemo flake8 flake8-import-order
+      run: pip install planemo galaxyxml flake8 flake8-import-order
     - uses: actions/checkout@v2
       with:
         fetch-depth: 1
