--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Upgrade pip
-    - run: pip install --upgrade pip
+      run: pip install --upgrade pip
     # Install the `wheel` package so that when installing other packages which
     # are not available as wheels, pip will build a wheel for them, which can be cached.
     - name: Install wheel
