--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -31,10 +31,9 @@ jobs:
         path: '$GITHUB_WORKSPACE/galaxy'
     - name: make venv ready for this galaxy and planemo 
       run:  |
-        cd '$GITHUB_WORKSPACE/galaxy'
-        python3 -m venv .venv
+        python3 -m venv $GITHUB_WORKSPACE/galaxy/.venv
         . .venv/bin/activate
-        pip install --upgrade pip
+        pip install pip
         pip install wheel
         pip install -r requirements.txt
         pip install galaxyxml
