--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -1,11 +1,14 @@
 name: Galaxy Tool Linting and Tests for push and PR
+# run planemo on a git repository containing a single tool
+# as a github action. Does NOT run flake8. So, bite me.
+# ross lazarus august 2020
 on: [push, pull_request]
 env:
   GALAXY_REPO: https://github.com/galaxyproject/galaxy
   GALAXY_RELEASE: release_20.05
 jobs:
   setup:
-    name: test a git repository containing a galaxy tool before commit or PR
+    name: setup environment and python
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -25,8 +28,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - uses: actions/checkout@v2
       with:
-    # Repository name with owner. For example, actions/checkout
-    # Default: ${{ github.repository }}
+    # planemo does not seem to want to install the requirement galaxyxml 
+    # into the venv it manages at tool testing so do it the old skool way
         repository: 'galaxyproject/galaxy'
         path: 'galaxy'
     - name: make venv ready for this galaxy and planemo 
@@ -44,7 +47,7 @@ jobs:
     - name: Install wheel
       run: pip install wheel
     - name: Install Planemo and flake8
-      run: pip install planemo galaxyxml flake8 flake8-import-order
+      run: pip install planemo galaxyxml 
     - uses: actions/checkout@v2
       with:
         fetch-depth: 1
