Updated README.md and removed old README.txt

--- a/.shed.yml
+++ b/.shed.yml
@@ -1,4 +1,4 @@
-name: ToolFactory
+name: toolfactory
 owner: fubar
 description: ToolFactory - tool to make Galaxy tools ready for the toolshed
 homepage_url: https://github.com/fubar2/toolfactory
