--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -47,11 +47,12 @@ jobs:
     - name: Install wheel
       run: pip install wheel
     - name: Install Planemo and flake8
-      run: pip install planemo 
+      run: pip install planemo flake8-import-order, flake8
     # galaxyxml temporarily removed until PR accepted
     - uses: actions/checkout@v2
       with:
         fetch-depth: 1
+    - flake8
     - name: Planemo lint
       run: planemo lint .
     - name: Planemo test tool
