--- a/docker/my_tool_list.yml
+++ b/docker/my_tool_list.yml
@@ -1,7 +1,7 @@
 api_key: <Admin user API key from galaxy_instance>
 galaxy_instance: <Galaxy instance IP>
 tools:
-- name: rgTF2
+- name: tool_factory_2
   owner: fubar
   tool_panel_section_id: Tool Makers
   tool_shed_url: https://toolshed.g2.bx.psu.edu
