--- a/docker/my_tool_list.yml
+++ b/docker/my_tool_list.yml
@@ -1,11 +1,12 @@
-
-api_key: HSNiugRFvgT574F43jZ7N9F3
-galaxy_instance: http://localhost:80
+api_key: admin
+galaxy_instance: http://localhost:8080
 install_resolver_dependencies: true
 install_tool_dependencies: false
 tools:
- - name: tool_factory_2
+- name: tool_factory_2
    owner: fubar
-   tool_panel_section_label: Tool Makers
+   tool_panel_section_label: "Tool Makers"
    tool_shed_url: https://toolshed.g2.bx.psu.edu
+ 
+ 
  
