--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,44 +3,66 @@
 # VERSION       0.2
 # patches startup so the below will install a workflow dropped into $GALAXY_ROOT/workflows
 # use docker run -p 8080:80  -d -e GALAXY_AUTO_UPDATE_WORKFLOWS=/galaxy-central/workflows/TF_sample_wf.ga -v /home/ubuntu/galaxy_storage/:/export/  toolfactory
-FROM bgruening/galaxy-stable
+FROM quay.io/bgruening/galaxy:20.05
 MAINTAINER Ross Lazarus ross.lazarus@gmail.com
 
 ENV GALAXY_CONFIG_BRAND=ToolFactory
 ENV GALAXY_LOGGING="full"
-
-# RUN apt-get update -y && apt-get install -y build-essential gcc apt-utils
-# needed for planemo build
-
-RUN /galaxy_venv/bin/python -m pip install --upgrade pip
-# RUN /galaxy_venv/bin/python -m pip install planemo
+ENV GALAXY_AUTO_UPDATE_TOOLS=/tftools/toolfactory_tools.yaml
+ENV $GALAXY_DEFAULT_ADMIN_USER="admin"
+# ensure triggering post-start-actions.sh
 
 # RUN add-tool-shed --url 'http://testtoolshed.g2.bx.psu.edu/' --name 'Test Tool Shed'
-ADD my_tool_list.yml $GALAXY_ROOT/config/toolfactory_tools.yaml
-ENV GALAXY_AUTO_UPDATE_TOOLS=$GALAXY_ROOT/config/toolfactory_tools.yaml
 
+RUN mkdir -p /tftools \
+  && mkdir -p /tftools/toolfactory \
+  && mkdir -p /tftools/planemo_test
+
+# things needed for post-install 
+RUN rm -rf $GALAXY_ROOT/requirements.txt
+ADD galreq.txt $GALAXY_ROOT/requirements.txt
+COPY ./tfsamplehistory.tar.gz /tftools/tfsamplehistory.tar.gz
+# focker untarred this into a folder structure with ADD ..Urrrrggggh.
+ADD ./tfwelcome.html /export/welcome.html
+ADD ./tfwelcome.html $GALAXY_ROOT/lib/galaxy/web/framework/static/welcome.html
+ADD TF_example_wf.ga /tftools/TF_example_wf.ga
+# toolfactory stuff
+ADD ./tftools/toolfactory /tftools/toolfactory
+ADD ./tftools/tf_tool_conf.xml /tftools/tf_tool_conf.xml
+ADD ./tftools/planemo_test /tftools/planemo_test
+
+ADD my_tool_list.yml /tftools/toolfactory_tools.yaml
+
+# NOTE above does work but takes 1-2 minutes
+
+# ENV GALAXY_CONFIG_TOOL_CONFIG_FILE=config/tool_conf.xml.sample,config/tf_tool_conf.xml,config/shed_tool_conf.xml.sample
+#ENV GALAXY_CONFIG_TOOL_CONFIG_FILE=/tftools/tf_tool_conf.xml,config/tool_conf.xml.sample
+# works but does not install dependencies
 # Add workflows to the Docker image
-RUN mkdir -p $GALAXY_ROOT/workflows
-ADD TF_example_wf.ga $GALAXY_ROOT/workflows/TF_example_wf.ga
+
+
+ADD ./tftools/datatypes_conf.xml $GALAXY_ROOT/lib/galaxy/config/sample/datatypes_conf.xml.sample
+ADD ./post-start-actions.sh $GALAXY_ROOT/config/post-start-actions.sh
+ADD ./postinstall.py /tftools/postinstall.py
 ADD post-start-actions.sh /export/post-start-actions.sh
-RUN chmod a+xr /export/post-start-actions.sh \
- && chmod a+xr $GALAXY_ROOT/workflows/TF_example_wf.ga 
+RUN chmod a+xr /export/post-start-actions.sh 
+RUN chmod a+xr /tftools/postinstall.py \
+ && chmod a+xr $GALAXY_ROOT/config/post-start-actions.sh 
+
+ADD ./TFstartup.sh /usr/bin/tfstart
+RUN chmod a+xr /usr/bin/tfstart
 
 # Add Galaxy interactive tours
 # ADD ./rna-workbench-tours/* $GALAXY_ROOT/config/plugins/tours/
 # Add data library definition file
 # ADD library_data.yaml $GALAXY_ROOT/library_data.yaml
-# cleanup dance
-RUN apt-get autoremove -y && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && rm -rf ~/.cache/ \
-    && find $GALAXY_ROOT/ -name '*.pyc' -delete | true \
-    && find /usr/lib/ -name '*.pyc' -delete | true \
-    && find /var/log/ -name '*.log' -delete | true \
-    && find $GALAXY_VIRTUAL_ENV -name '*.pyc' -delete | true \
-    && rm -rf /tmp/* /root/.cache/ /var/cache/* $GALAXY_ROOT/client/node_modules/ $GALAXY_VIRTUAL_ENV/src/ /home/galaxy/.cache/ /home/galaxy/.npm
-ENV GALAXY_DEFAULT_ADMIN_USER=''
+
+
 VOLUME ["/export/"]
+# , "/data/", "/var/lib/docker"]
 EXPOSE :80
 EXPOSE :21
 EXPOSE :8800
-CMD ["/usr/bin/startup"]
+
+CMD ["/usr/bin/tfstart"]
 
