Copied docker stuff from gvl dev image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-# Galaxy - Toolshed Docker image
+ # Galaxy - Toolshed Docker image
 # Derived from bgruening stable galaxy 
 # VERSION       0.2
 # patches startup so the below will install a workflow dropped into $GALAXY_ROOT/workflows
@@ -23,7 +23,6 @@ RUN find $GALAXY_ROOT/ -name '*.pyc' -delete | true \
 ENV GALAXY_CONFIG_BRAND=ToolFactory
 ENV GALAXY_LOGGING="full"
 # ENV GALAXY_AUTO_UPDATE_TOOLS=/tftools/toolfactory_tools.yaml
-ENV $GALAXY_DEFAULT_ADMIN_USER="admin"
 # ensure triggering post-start-actions.sh
 
 # RUN add-tool-shed --url 'http://testtoolshed.g2.bx.psu.edu/' --name 'Test Tool Shed'
@@ -31,53 +30,44 @@ ENV $GALAXY_DEFAULT_ADMIN_USER="admin"
 
 FROM galaxy-dev
 
-RUN mkdir -p /tftools \
-  && mkdir -p /tftools/toolfactory \
-  && mkdir -p /tftools/planemo\
-  && mkdir -p /tftools/planemo/planemo_test
-
-
+COPY tftools/ /tftools/
 # things needed for post-install 
-COPY ./tfsamplehistory.tar.gz /tftools/tfsamplehistory.tar.gz
-# focker untarred this into a folder structure with ADD ..Urrrrggggh.
-ADD ./tfwelcome.html /export/welcome.html
-ADD ./tfwelcome.html $GALAXY_ROOT/lib/galaxy/web/framework/static/welcome.html
-ADD TF_example_wf.ga /tftools/TF_example_wf.ga
-# toolfactory stuff
-ADD ./tftools/toolfactory /tftools/toolfactory
-ADD ./tftools/tf_tool_conf.xml /tftools/tf_tool_conf.xml
-ADD ./tftools/planemo_test /tftools/planemo_test
-
-ADD my_tool_list.yml /tftools/toolfactory_tools.yaml
+RUN mkdir -p /export
+ADD tftools/tfwelcome.html /export/welcome.html
+ADD tftools/tfwelcome.html $GALAXY_ROOT/lib/galaxy/web/framework/static/welcome.html
+RUN chown $GALAXY_USER:$GALAXY_USER $GALAXY_ROOT/lib/galaxy/web/framework/static/welcome.html
+# ADD my_tool_list.yml /tftools/toolfactory_tools.yaml
+ADD tftools/tf_tool_conf.xml $GALAXY_ROOT/config/tf_tool_conf.xml
+RUN chown $GALAXY_USER:$GALAXY_USER $GALAXY_ROOT/config/tf_tool_conf.xml
 
 # NOTE above does work but takes 1-2 minutes
-
 # ENV GALAXY_CONFIG_TOOL_CONFIG_FILE=config/tool_conf.xml.sample,config/tf_tool_conf.xml,config/shed_tool_conf.xml.sample
-ENV GALAXY_CONFIG_TOOL_CONFIG_FILE=/tftools/tf_tool_conf.xml,config/tool_conf.xml.sample
-# works but does not install dependencies - done in postinstall
 
-ADD ./tftools/datatypes_conf.xml $GALAXY_ROOT/lib/galaxy/config/sample/datatypes_conf.xml.sample
-ADD ./post-start-actions.sh $GALAXY_ROOT/config/post-start-actions.sh
-ADD ./postinstall.py /tftools/postinstall.py
-ADD post-start-actions.sh /export/post-start-actions.sh
-RUN chmod a+xr /export/post-start-actions.sh 
-RUN chmod a+xr /tftools/postinstall.py \
- && chmod a+xr $GALAXY_ROOT/config/post-start-actions.sh 
-
-ADD ./TFstartup.sh /usr/bin/tfstart
-RUN chmod a+xr /usr/bin/tfstart
-
+ADD tftools/datatypes_conf.xml $GALAXY_ROOT/lib/galaxy/config/sample/datatypes_conf.xml.sample
+RUN chown $GALAXY_USER:$GALAXY_USER $GALAXY_ROOT/lib/galaxy/config/sample/datatypes_conf.xml.sample
+ADD tftools/post-start-actions.sh $GALAXY_ROOT/config/post-start-actions.sh
+ADD tftools/TFstartup.sh /usr/bin/tfstart
+ADD tftools/post-start-actions.sh /export/post-start-actions.sh
+RUN chmod a+xr /export/post-start-actions.sh \
+ && chmod a+xr /tftools/postinstall.py \
+ && chmod a+xr $GALAXY_ROOT/config/post-start-actions.sh \ 
+ && chmod a+xr /usr/bin/tfstart
+ADD tftools/tool_shed.yml $GALAXY_ROOT/config/tool_shed.yml
+ADD tftools/tool_shed.yml $GALAXY_ROOT/lib/galaxy/config/sample/tool.shed.yml.sample
+COPY tftools/requirements.txt $GALAXY_ROOT
 # Add Galaxy interactive tours
 # ADD ./rna-workbench-tours/* $GALAXY_ROOT/config/plugins/tours/
 # Add data library definition file
 # ADD library_data.yaml $GALAXY_ROOT/library_data.yaml
+ENV $GALAXY_DEFAULT_ADMIN_USER="admin"
+ENV GALAXY_CONFIG_TOOL_CONFIG_FILE=$GALAXY_ROOT/config/tf_tool_conf.xml,config/tool_conf.xml.sample
+# works but does not install dependencies - done in postinstall
+RUN chown -R $GALAXY_USER:$GALAXY_USER /tftools 
 
-
-VOLUME ["/export/"]
-# , "/data/", "/var/lib/docker"]
+VOLUME ["/export/", "/data/", "/var/lib/docker"]
 EXPOSE :80
 EXPOSE :21
 EXPOSE :8800
-
+EXPOSE :9009
 CMD ["/usr/bin/tfstart"]
 
